minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__session__tests__session_reset_command_3.snap
---
source: minigu/parser/src/parser/impls/session.rs
expression: parsed
---
- - Schema
  - start: 14
    end: 20
- start: 0
  end: 20
