minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__session__tests__session_set_command_graph.snap
---
source: minigu/parser/src/parser/impls/session.rs
expression: parsed
---
- Graph:
    - Ref:
        Ref:
          schema:
            - Absolute: []
            - start: 18
              end: 19
          objects:
            - - a
              - start: 19
                end: 20
    - start: 18
      end: 20
- start: 0
  end: 20
