minigu/gql/parser/src/parser/impls/snapshots/gql_parser__parser__impls__session__tests__session_set_command_time_zone.snap
---
source: minigu/parser/src/parser/impls/session.rs
expression: parsed
---
- TimeZone:
    - kind: Char
      literal: UTC
    - start: 22
      end: 27
- start: 0
  end: 27
